<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="host">192.168.1.7</string>
    <string name="port">3000</string>

    <string name="app_name">TrekProbe</string>
    <string name="title_home">Home</string>
    <string name="title_stream_settings">Stream</string>
    <string name="title_server_settings">Server</string>
    <string name="title_robot_settings">Robot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="start_cam">start</string>
    <string name="apply">apply</string>
    
    <string name="server_settings">Server Settings</string>
    <string name="ip_title">IP Address</string>
    <string name="port_title">Port</string>
    
    <string name="stream_settings">Stream Settings</string>
    <string name="cam_res">Resolution</string>
    <string name="frame_rate">Framerate</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="audio">Stream Audio</string>
    <string name="local_stream">Show Local Stream</string>
    <string name="remote_stream">Show Remote in Fullscreen</string>
    
    <string name="max">. max</string>
    <string name="min">. min</string>

</resources>
